# ProjetoLumiBoxBack

./: .pylintrc  pyproject.toml  requirements.txt
LumiBox/: manage.py
LumiBox/LumiBox/: asgi.py  settings.py  urls.py  wsgi.py
src/: manage.py
src/LumiBoxBack/: asgi.py  settings.py  urls.py  wsgi.py
src/api_lb/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/api_lb/migrations/: 0001_initial.py  0002_filme_genero_serie_remove_usuario_email_and_more.py  0003_rename_email_usuario_email_and_more.py
src/api_lb/services/: tmdb.py
src/lumibox/: settings.py  urls.py
src/media/usuarios/fotos/: .jpg_c6wmS0b
src/mural/: models.py
src/mural/migrations/: 0001_initial.py
